Add vaadin upload

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,18 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </head>
   <body>
 
-    <p>An example of <code>&lt;wc-spreadsheet&gt;</code>:</p>
-
-    <button>Say Something</button>
-
-    <wc-spreadsheet author='{"name": "Lord Meowser", "image": "http://placekitten.com/g/200/300"}' fancy>
-      <h2>Hello wc-spreadsheet</h2>
-    </wc-spreadsheet>
-
-    <script>
-      document.querySelector('button').addEventListener('click', function() {
-        alert(document.querySelector('wc-spreadsheet').sayHello('Hallo!'));
-      });
+    <wc-spreadsheet></wc-spreadsheet>
     </script>
 
   </body>
